[package]
name = "server-signer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["curv-kzen/num-bigint"]

[dependencies]
curv-kzen = { version = "0.9", default-features = false }
sha2 = "0.9"

[dependencies.multi-party-ecdsa]
git = "https://github.com/ZenGo-X/multi-party-ecdsa"
default-features = false
version = "0.8.0"


[dependencies.paillier]
version = "0.4.2"
package = "kzen-paillier"
default-features = false
