[package]
name = "server-signer"
version = "0.1.0"
edition = "2021"

[features]
default = ["curv-kzen/num-bigint"]

[dependencies]
curv-kzen = { version = "0.9", default-features = false }
sha2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
base64 = "0.13.0"
zk-paillier = { version = "0.4.3", default-features = false }

[dependencies.multi-party-ecdsa]
git = "https://github.com/ZenGo-X/multi-party-ecdsa"
default-features = false
version = "0.8.0"

[dependencies.paillier]
version = "0.4.2"
package = "kzen-paillier"
default-features = false
